ws-slo/infrastructure/kubevirt/components/monitoring/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kubevirt-metrics
  namespace: kubevirt-system
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: vmagent
      ports:
        - port: metrics
  podSelector:
    matchLabels:
      prometheus.kubevirt.io: "true"
  policyTypes:
    - Ingress
